css/style.css
/* GENERAL STYLE */
/* Utilities */

.debug {
    border: 1px solid red;
}

* {
    font-family: 'Arial', sans-serif;
}

/*  body {
    background-color: red;
    height: 20000px;
} */
 
.site-btn {
    border-radius: 50px
}

.site-btn-dark {
    background-color: #363636;
    border: 1px solid #363636;
}

.site-btn-red {
    background-color: red;
    border: 1px solid red;
}

.blue-title p {
    color: #0072ce;
    text-transform: uppercase; 
    margin:0;
 }
 
.section-title {
    color: #1f1f1f
}

.section-subtitle h5 {
    color: #727272;
    line-height: 2rem;
}

/* Brand */
.brand-container {
    background-color: #000;
    display: flex;
    justify-content: flex-end;
}

.brand-container img {
    height: 15px;

}


/* Header */
header {
    position: fixed;
    width: 100%;
    top: 30px;
    background-color: #fff;
}

header .header-container .navbar-light .navbar-nav .nav-link {
    font-family: 'Helvetica', sans-serif;
}

.header-container {
    color: #ffffff
}

.header-container .navbar-brand img {
    height: 50px
}
.site-nav-items ul .nav-item {
    display: flex;
}

.site-nav-items ul {
    display: flex;
    padding-left: 0.5rem
}

.site-nav-items ul .nav-item img {
    height: 12px;
    vertical-align: middle;
    margin-left: 7px
}
 .header-container .navbar-light .navbar-nav .nav-link {
     color: black
}

 .header-container .navbar-light .navbar-nav .nav-link::after {
     font-size: 19px;
     color: #999999
 }

.site-nav-right ul li a img {
     height: 23px;
     vertical-align: middle;
 }
 
 /* Jumbotron */
 .jumbo {
     margin-top: 95px;
     height: 650px;
     background-image: url('../img/jumbo-bg.png');
     background-size: cover;
     background-position: top center;
     background-repeat: no-repeat
 }

 .site-jumbo-items img {
     width: 50%;
     display: block;

 }

 .site-jumbo-items h2 {
     color: white;
 }

 .site-jumbo-items p {
     color: white;
     font-size: 18px
 }


/* Carousel */ 
.site-carousel-img {
    height: 100%; 
    width: 100%;
    border-radius: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}

.site-carousel-active {
    border: 1px solid #0072ce;
}


.site-carousel-img img {
    height: 95%;
    width: 97%;
    border-radius: 15px;
    object-fit: cover;
}


/* PS5 Banner */

.ps5-image img {
    width: 100%;
}

.banner-row {
    flex-wrap: wrap;
}
.banner-carousel-item {
    display: flex;
    justify-content: center;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    opacity: 0.8;
    cursor: pointer;
}
.banner-carousel-item:hover {
    opacity: 1
}
.banner-carousel-item {
    width: calc(100% / 3);
    padding-top: 30px;
    padding-bottom: 30px;
}

.banner-carousel-item img {
    width: 95%;
}

.banner-carousel-active {
    border-bottom: 2px solid #0072ce;
    opacity: 1
}

 /* Second Jumbotron */
 .second-jumbo {
    margin-top: 95px;
    height: 650px;
    background-image: url('../img/it-takes-two-hero-banner-desktop.jpg');
    background-size: cover;
    background-position: top center;
    background-repeat: no-repeat
}

.second-jumbo .site-jumbo-items img {
    width: 70%;
    display: block;

}





 @media screen and (min-width: 576px) {
    .site-jumbo-items img {
        width: 50%;
        display: block;
   
    }
 }


   @media screen and (min-width: 768px) {
    .site-jumbo-items img {
     width: 25%;
     display: block;
    }

    .second-jumbo .container .row .site-jumbo-items img {
     width: 50%;
     display: block;
    }

    .banner-carousel-item {
        width: calc(100% / 5);
        padding-top: 0px;
        padding-bottom: 0px;
    }

    .banner-row {
        justify-content: center
    }

    .banner-carousel-item img {
        width: 65%;
    }
    
}

 @media screen and (min-width: 992px) {
    .site-jumbo-items img {
        width: 30%;
        display: block;
   
    }
    .second-jumbo .container .row .site-jumbo-items img {
        width: 40%;
        display: block;
   
    }
 } 

 @media screen and (min-width: 1200px) {
    .site-jumbo-items img {
        width: 30%;
        display: block;
   
    }
    .second-jumbo .container .row .site-jumbo-items img {
        width: 25%;
        display: block;
   
    }
 } 
 @media screen and (min-width: 1400px) {
    .site-jumbo-items img {
        width: 50%;
        display: block;
   
    }
    .second-jumbo .container .row .site-jumbo-items img {
        width: 50%;
        display: block;
   
    }
 } 
  

